update LPG section

--- a/Notes.tex
+++ b/Notes.tex
@@ -37,10 +37,37 @@ breaklines=true
 
 \title{Commodities Notes}
 
+
 \date{}
 
 \begin{document}
 \maketitle
+\tableofcontents
+
+
+\section{Derivatives}
+\subsection{Futures}
+s
+\subsection{Swaps}
+
+
+\subsection{Composite positions}
+
+\subsubsection{Time/Calendar Spreads}
+\subsubsection{Boxes}
+
+
+\subsection{Marking positions}
+
+\subsubsection{Net Delta}
+\subsubsection{Pricing out}
+
+
+
+\section{LPG}
+
+
+
 
 
 \end{document}
