--- a/Notes.tex
+++ b/Notes.tex
@@ -47,7 +47,7 @@ breaklines=true
 
 \section{Derivatives}
 \subsection{Futures}
-s
+testtest
 \subsection{Swaps}
 
 
@@ -64,7 +64,7 @@ s
 
 
 
-\section{LPG}
+
 
 
 
