--- a/Notes.tex
+++ b/Notes.tex
@@ -36,12 +36,13 @@ breaklines=true
 \urlstyle{same}
 
 \title{Commodities Notes}
+\author{Henry}
 
-
-\date{}
 
 \begin{document}
 \maketitle
+
+
 \tableofcontents
 
 
